# backend/api/user/user_model.go
@@ -1,13 +1,10 @@
 package user
 
-import "time"
-
 type User struct {
 	Id                string
-	CreatedAt         time.Time
-	UpdatedAt         time.Time
 	Email             string
 	Password          string
+	DisplayName       string
 	VerificationToken string
 	IsVerified        bool
 }
