# backend/docs/swagger.json
@@ -66,6 +66,22 @@
                 }
             }
         },
+        "/api/auth/refresh": {
+            "post": {
+                "summary": "Refresh Token",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/api/auth/reset-password": {
             "post": {
                 "summary": "Reset password",
@@ -98,7 +114,7 @@
                 "summary": "Create account",
                 "parameters": [
                     {
-                        "description": "Email and password",
+                        "description": "Email, password, display name",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -153,10 +169,16 @@
         "user.CreateAccountRequest": {
             "type": "object",
             "required": [
+                "display_name",
                 "email",
                 "password"
             ],
             "properties": {
+                "display_name": {
+                    "type": "string",
+                    "maxLength": 100,
+                    "minLength": 1
+                },
                 "email": {
                     "type": "string",
                     "maxLength": 100,
